# delta-go

./: .env.example  .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CODE_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_REVIEW.md  DEPLOYMENT_STATUS.md  README.md  REVIEW_SUMMARY.md  cloudbuild-hmm.yaml  cloudbuild-trade-predictor.yaml  cloudbuild-vm.yaml  cloudbuild.yaml  plan.md  verify-deployment.sh
.github/workflows/: deploy-gcp.yml
cloud_function/: Dockerfile  requirements-shared.txt  requirements.txt
cloud_function/app/: main.py
cloud_function/trade_predictor/: Dockerfile  requirements.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
go/: go.mod
go/.backtest_cache/: BTCUSD_1h_20240101_20241201.json  BTCUSD_1h_20240601_20241201.json  BTCUSD_5m_20240101_20240102.json  BTCUSD_5m_20240101_20240201.json  BTCUSD_5m_20240101_20240401.json  BTCUSD_5m_20240101_20240601.json  BTCUSD_5m_20240301_20240601.json  BTCUSD_5m_20240601_20240701.json  ETHUSD_1h_20240101_20241201.json  ETHUSD_5m_20240101_20240201.json  ETHUSD_5m_20240101_20240401.json  (+25 more)
go/config/: config.go
models/: hmm_model_BTCUSD.pkl  hmm_model_BTCUSD_results.json  hmm_model_ETHUSD.pkl  hmm_model_ETHUSD_results.json  hmm_model_SOLUSD.pkl  hmm_model_SOLUSD_results.json  trade_predictor.pkl
python/: backtest_results.json  pyproject.toml
python/backtest/: backtest.py  backtest_results.json
python/regime_ml/: README.md  pyproject.toml
python/regime_ml/src/regime_ml/: __init__.py  data_fetcher.py  hmm_detector.py  model_io.py
python/training/: train_hmm.py  train_trade_predictor.py
(+85 files in other folders)
