[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regime-ml"
version = "0.1.0"
description = "HMM-based market regime detection for Delta-Go trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "hmmlearn>=0.3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regime_ml"]
